syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.backendserver";
option java_outer_classname = "BackEndServerProto";
option objc_class_prefix = "HLW";

package helloworld;

// The greeting service definition.
service Server {

  rpc sendMessage (sendingMessage) returns (messageResponse) {}
  rpc getAllChatMessages (chatMessageRequest) returns (stream messageResponse) {}
}

message chatMessageRequest {
  string chatroom = 1;
}

message sendingMessage {
  string username = 1;
  string timestamp = 2;
  string chatroom = 3;
  string data = 4;
  int32 type = 5;
}

message messageResponse {
  string username = 1;
  string timestamp = 2;
  string chatroom = 3;
  string data = 4;
  int32 type = 5;
}